--- a/index.html
+++ b/index.html
@@ -6,18 +6,16 @@
 	<meta charset="UTF-8">
     <title>WW2100 Key Findings</title>           
 
-    <!--===============  Modules and plugins ===============-->
+    <!-- jquery and bootstrap css for ui stuff -->
 	<link rel="stylesheet" href="lib/jquery-ui-1.11.4/jquery-ui.min.css">
 	<link rel="stylesheet" href="lib/bootstrap-3.3.6-dist/css/bootstrap.css">
 	
-    <!-- d3 handles SVG manipulation data linking -->
+    <!-- d3 for SVG manipulation, d3-queue for asynchronous json imports-->
+    <!-- TODO d3 isn't actually used for anything except json import -->
     <script src="lib/d3/d3.js"></script>
+    <script src="https://d3js.org/d3-queue.v2.min.js"></script>
 
-	<!-- jQuery and jQueryUI for GUI interactions -->
 	
-	<!-- jqueryui doesn't work right with these links, don't know why -->
-	<!-- <script src="lib/jquery-3.0.0.js"></script>
-	<script src="lib/jquery-ui-1.11.4/jquery-ui.min.js"></script> -->
 
 	<script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
@@ -33,8 +31,10 @@
 
 <body>
 
+	<!-- leaflet map goes in this div -->
 	<div id="map"></div>
 	
+	<!-- Holds all the dropdowns etc for data selection -->
 	<div id="dataSelectUIContainer" class="uiBox">
 		
 		<div class="selectorContainer">
@@ -61,14 +61,16 @@
 				<option value="ref">Reference</option>
 			</select>
 		</div>
-		
-		
-		
-		
+
+		<div class="checkbox">
+			<label><input type="checkbox" id="citiesLayerCheckbox" checked value="">Reference Layers</label>
+		</div>
 		
 	</div>
 
-	<!-- Example Modals for Reference -->
+	<!-- Bootstrap Modals! These are what show up when the i button is clicked -->
+	
+	<!-- Snow Info modal -->
 	<div class="container">
 	  <!-- Modal -->
 	  <div class="modal fade" id="snowfallModal" role="dialog">
@@ -97,7 +99,7 @@
 	  </div>
 	</div>
 	
-	<!-- Example Modals for Reference -->
+	<!-- Developed Land Value info modal -->
 	<div class="container">
 	  <!-- Modal -->
 	  <div class="modal fade" id="devLandValModal" role="dialog">
@@ -126,7 +128,7 @@
 	  </div>
 	</div>
 	
-	<!-- Example Modals for Reference -->
+	<!-- Landcover Info Modal -->
 	<div class="container">
 	  <!-- Modal -->
 	  <div class="modal fade" id="landcoverModal" role="dialog">
@@ -155,7 +157,12 @@
 	  </div>
 	</div>
 
+	<!-- END MODALS -->
+	
+	<!-- Button for showing modals -->
 	<div id="info" data-toggle="modal" data-target="#landcoverModal">
+		<!-- The i is totally just 3 svg rectangles and a circle 
+			arranged in an i shape -->
 		<svg id="infoIcon" width="10" height="33">
 			<circle cx="4.5" cy="7" r="3"/>
 			<rect x="0" y="13" width="7" height="3"></rect>
@@ -164,11 +171,13 @@
 		</svg>
 	</div>
 
+	<!-- Container for the legend -->
 	<div id="legendContainer" class="uiBox">
 		<label>Legend Title</label>
 		<div id="legendItemContainer"></div>
 	</div>
 
+	<!-- Main scripts, they initialize the App -->
     <script src="scripts/main.js"></script>
     <script src="scripts/GUI.js"></script>
 </body>
