Simplified code for swapping out data layers

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 			<label>Select Scenario</label>
 			<select name="scenarioSelect" id="scenarioSelect" class="form-control">
 				<option value="ref">Reference</option>
+				<option value="econExtreme">Econ Extreme</option>
 			</select>
 		</div>
 
