icons next to reference layer checkboxes

--- a/index.html
+++ b/index.html
@@ -77,11 +77,21 @@
 		</div>
 
 		<div class="checkbox">
-			<label><input type="checkbox" id="citiesLayerCheckbox" checked value="">Cities</label>
+			<label><input type="checkbox" id="citiesLayerCheckbox" checked value="">
+				<div id="citiesIcon">
+					<svg width="20px" height="10px">
+						<circle cx="10" cy="5" r="3" fill="black" />
+					</svg> 
+				</div> Cities
+			</label>
 		</div>
 		
+		
+		
 		<div class="checkbox">
-			<label><input type="checkbox" id="streamsLayerCheckbox" checked value="">Streams</label>
+			<label><input type="checkbox" id="streamsLayerCheckbox" checked value="">
+				<div id="streamsIcon"></div> Streams
+			</label>
 		</div>
 		
 		<div class="sliderContainer">
