Replaced leaflet version, about to add vector tiles

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- TODO d3 isn't actually used for anything except json import -->
     <script src="lib/d3/d3.js"></script>
     <script src="https://d3js.org/d3-queue.v2.min.js"></script>
+    <script src="http://d3js.org/topojson.v1.min.js"></script>
 
 	
 
@@ -321,7 +322,7 @@
 	
 	<!-- Main scripts, they initialize the App -->
 	<script src="scripts/ColorUtils.js"></script>
-    <script src="scripts/main.js"></script>
+    <script src="scripts/main2.js"></script>
     <script src="scripts/GUI.js"></script>
 </body>
 </html>
