--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 		
 		<div class="sliderContainer">
 			<label>Opacity</label>
-			<input type="range" id="opacitySlider"/ min="0", max="1" value="100" step="0.01">
+			<input type="range" id="opacitySlider"/ min="0", max="1" value="0.8" step="0.01">
 		</div>
 		
 		<div class="selectorContainer">
@@ -323,6 +323,9 @@
 	<!-- Main scripts, they initialize the App -->
 	<script src="scripts/ColorUtils.js"></script>
     <script src="scripts/main2.js"></script>
+    <script src="scripts/tileBuilder.js"></script>
+    <script src="scripts/geojson-vt-dev.js"></script>
+    <script src="scripts/L.CanvasTiles.js"></script>
     <script src="scripts/GUI.js"></script>
 </body>
 </html>
