Started adding buttons for more info about scenarios

--- a/index.html
+++ b/index.html
@@ -64,67 +64,120 @@
 			</datalist>
 		</div>
 		
-		<label style="margin: 10px 0px 0px 0px;">Select Scenario</label>
+		<label style="margin: 10px 0px 0px 0px;">Compare Scenarios</label>
 		<div data-toggle="buttons">
 			
 			<label 
+			 data-toggle="popover"
+			 data-content="Words and things. Also, some other words."
+			 data-placement="left"
+			 data-container="body"
 			 class="btn btn-primary referenceScenarioBtn scenarioButton 
 			        landcover snowfall agLandVal devLandVal aridity active" 
-			 id="refButtonLabel">
+			 id="refButton">
 				<input type="radio" name="options" id="refRadio" autocomplete="off" checked>
 				Reference Case
 			</label>
 			
+			<button class="glyphicon glyphicon-question-sign scenarioExplainerButton"
+			id="refButtonExplainer">
+			</button>
+			
 			<label 
+			 data-toggle="popover"
+			 data-content="Words and things. Also, some other words."
+			 data-placement="left"
+			 data-container="body"
 			 class="btn btn-primary climateScenarioBtn scenarioButton 
 			        landcover" 
-			 id="highClimButtonLabel">
+			 id="highClimButton">
 				<input type="radio" name="options" id="option2" autocomplete="off"> 
 				High Climate Change
 			</label>
 			
+			<button class="glyphicon glyphicon-question-sign scenarioExplainerButton"
+			id="highClimButtonExplainer">
+			</button>
+			
 			<label 
+			 data-toggle="popover"
+			 data-content="Words and things. Also, some other words."
+			 data-placement="left"
+			 data-container="body"
 			 class="btn btn-primary climateScenarioBtn scenarioButton 
 			        landcover agLandVal" 
-			 id="highPopButtonLabel">
+			 id="highPopButton">
 				<input type="radio" name="options" id="option2" autocomplete="off"> 
 				High Population
 			</label>
 			
+			<button class="glyphicon glyphicon-question-sign scenarioExplainerButton"
+			id="highPopButtonExplainer">
+			</button>
+			
 			<label 
+			 data-toggle="popover"
+			 data-content="Words and things. Also, some other words."
+			 data-placement="left"
+			 data-container="body"
 			 class="btn btn-primary climateScenarioBtn scenarioButton 
 			        landcover agLandVal" 
-			 id="urbExpandButtonLabel">
+			 id="urbExpandButton">
 				<input type="radio" name="options" id="option2" autocomplete="off"> 
 				Urban Expansion
 			</label>
 			
+			<button class="glyphicon glyphicon-question-sign scenarioExplainerButton"
+			id="urbExpandButtonExplainer">
+			</button>
+			
 			<label 
+			data-toggle="popover"
+			 data-content="Words and things. Also, some other words."
+			 data-placement="left"
+			 data-container="body"
 			 class="btn btn-primary climateScenarioBtn scenarioButton 
 			        landcover" 
-			 id="fireSuppressButtonLabel">
+			 id="fireSuppressButton">
 				<input type="radio" name="options" id="option2" autocomplete="off"> 
 				Fire Suppression
 			</label>
 			
+			<button class="glyphicon glyphicon-question-sign scenarioExplainerButton"
+			id="fireSuppressButtonExplainer">
+			</button>
+			
 			<label 
+			data-toggle="popover"
+			 data-content="Words and things. Also, some other words."
+			 data-placement="left"
+			 data-container="body"
 			 class="btn btn-primary climateScenarioBtn scenarioButton 
 			        landcover" 
-			 id="managedButtonLabel">
+			 id="managedButton">
 				<input type="radio" name="options" id="option2" autocomplete="off">
 				Managed
 			</label>
 			
+			<button class="glyphicon glyphicon-question-sign scenarioExplainerButton"
+			id="managedButtonExplainer">
+			</button>
+			
 			<label 
+			data-toggle="popover"
+			 data-content="Words and things. Also, some other words."
+			 data-placement="left"
+			 data-container="body"
 			 class="btn btn-primary climateScenarioBtn scenarioButton 
 			        landcover agLandVal aridity" 
-			 id="econExtremeButtonLabel">
+			 id="econExtremeButton">
 				<input type="radio" name="options" id="option2" autocomplete="off"> 
 				Worst Case
 			</label>
 			
-			
-			
+			<button class="glyphicon glyphicon-question-sign scenarioExplainerButton"
+			id="econExtremeButtonExplainer">
+			</button>
 			
 			
 			
