Tweaked and added content to story window

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<label>Select Data Layer</label>
 			<select name="dataTypeSelect" id="dataTypeSelect" class="form-control">
 				<option value="landcover">Land Cover</option>
-				<option value="snowfall">Snow Water Equivalent</option>
+				<option value="snowWaterEquivalent">Snow Water Equivalent</option>
 				<option value="devLandVal">Developed Land Value</option>
 				<option value="agLandVal">Agricultural Land Value</option>
 				<option value="aridity">Aridity Index</option>
@@ -71,7 +71,7 @@
 			 data-placement="left"
 			 data-container="body"
 			 class="btn btn-primary referenceScenarioBtn scenarioButton 
-			        landcover snowfall agLandVal devLandVal aridity active" 
+			        landcover snowWaterEquivalent agLandVal devLandVal aridity active" 
 			 id="refButton">
 				<input type="radio" name="options" id="refRadio" autocomplete="off" checked>
 				Reference Case
