Improved rivers reference layer

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			 data-placement="left"
 			 data-container="body"
 			 class="btn btn-primary climateScenarioBtn scenarioButton 
-			        lulc maxSWE" 
+			        maxSWE" 
 			 id="highClimButton">
 				<input type="radio" name="options" id="option2" autocomplete="off"> 
 				High Climate Change
@@ -237,8 +237,6 @@
 	<div id="legendAndInfoButtonContainer">
 		<!-- Container for the legend -->
 		<div id="legendContainer" class="uiBox">
-			<label>Legend Title</label>
-			<div id="legendItemContainer"></div>
 		</div>
 
 	</div>
