--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	
 	<meta charset="UTF-8">
-    <title>WW2100 Key Findings</title>           
+    <title>WW2100 Interactive Map</title>           
 
     <!-- jquery and bootstrap css for ui stuff -->
 	<link rel="stylesheet" href="lib/jquery-ui-1.11.4/jquery-ui.min.css">
@@ -47,13 +47,28 @@
 			</select>
 		</div>
 		
-		<p class="UIHeader">Select Time Period</p>
-			
+        <div>
+            <p class="UIHeader" id="selectTimePeriodHeader"
+                    data-toggle="popover"
+                    data-content="The selectable time periods are different
+                    depending on the currently selected data layer. When viewing
+                    Snow Water Equivalent, values are the average for that 
+                    decade. With other layers, values are for a single year."
+                    data-placement="left"
+                    data-container="body">
+                Select Time Period
+            </p>
+            <button class="glyphicon glyphicon-question-sign explainerButton 
+                    headerExplainerButton"
+                    id="selectTimePeriodHeaderExplainer"
+            </button>
+        </div>
+		
 		<div class="sliderContainer UIElementContainer">
 			<div class="stepLabels" style="text-align: center">
-				<span style="float: left">2010</span>
-				<span>2050</span>
-				<span style="float: right">2099</span>
+				<span id="earlyTimePeriodLabel" style="float: left">2010</span>
+				<span id="midTimePeriodLabel">2050</span>
+				<span id="lateTimePeriodLabel" style="float: right">2099</span>
 			</div>
 			<input type="range" id="timeRange" min="1" max="3" step="1" 
 			 value="1" list="steplist"/>
@@ -68,8 +83,8 @@
 			<p class="UIHeader" id="compareScenariosHeader"
 					data-toggle="popover"
 					data-content="<a target='_blank' 
-					href='http://inr.oregonstate.edu/ww2100/model-overview/scenarios'
-					>Learn more</a> about scenarios."
+					href='http://inr.oregonstate.edu/ww2100/model-overview/scenarios'>
+					Learn more</a> about scenarios."
 					data-placement="left"
 					data-container="body">
 				Compare Scenarios
@@ -79,9 +94,6 @@
 					id="compareScenariosHeaderExplainer"
 			</button>
 		</div>
-		
-		
-		
 		
 		<!-- start scenario buttons -->
 		<div class="scenarioButtonsContainer UIElementContainer">
