Added button for showing/hiding SWE graph, improved interactions

--- a/index.html
+++ b/index.html
@@ -309,6 +309,11 @@
 		</svg>
 	</div>
 	
+	<div id="showGraphButton" class="uiBox" style="display: none;">
+		<span class='glyphicon glyphicon-stats'></span>
+	</div>
+
+
 	<div id="loading" class="uiBox hidden">Loading data, please wait...</div>
 	
 	<!-- Main scripts, they initialize the App -->
