--- a/index.html
+++ b/index.html
@@ -50,10 +50,8 @@
         <div>
             <p class="UIHeader" id="selectTimePeriodHeader"
                     data-toggle="popover"
-                    data-content="The selectable time periods are different
-                    depending on the currently selected data layer. When viewing
-                    Snow Water Equivalent, values are the average for that 
-                    decade. With other layers, values are for a single year."
+                    data-content="Move the slider to change the time period of 
+                    the data layer."
                     data-placement="left"
                     data-container="body">
                 Select Time Period
@@ -322,7 +320,7 @@
 	<!-- Main scripts, they initialize the App -->
 	<script src="scripts/ColorUtils.js"></script>
     <script src="scripts/main2.js"></script>
-    <script src="scripts/tileBuilder.js"></script>
+    <script src="scripts/buildTileLayer.js"></script>
     <script src="scripts/geojson-vt-dev.js"></script>
     <script src="scripts/L.CanvasTiles.js"></script>
     <script src="scripts/GUI.js"></script>
