--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
 				<option value="lulc">Land Cover</option>
 				<option value="maxSWE">Snow Water Equivalent</option>
 				<option value="landValue">Land Value</option>
-				<option value="aridity">Aridity Index</option>
 			</select>
 		</div>
 		
@@ -82,7 +81,7 @@
 					data-toggle="popover"
 					data-content="<a target='_blank' 
 					href='http://inr.oregonstate.edu/ww2100/model-overview/scenarios'>
-					Learn more</a> about scenarios."
+					Click here</a> to learn more about scenarios."
 					data-placement="left"
 					data-container="body">
 				Compare Scenarios
@@ -310,7 +309,7 @@
 		</svg>
 	</div>
 	
-	<div id="showGraphButton" class="uiBox" style="display: none;">
+	<div id="showChartButton" class="uiBox" style="display: none;">
 		<span class='glyphicon glyphicon-stats'></span>
 	</div>
 
