Added et date, performance improvements

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 				 data-placement="left"
 				 data-container="body"
 				 class="btn btn-primary climateScenarioBtn scenarioButton 
-				        maxSWE" 
+				        maxSWE et" 
 				 id="highClimButton">
 					<input type="radio" name="options" id="option2" autocomplete="off"> 
 					HighClim
@@ -190,13 +190,13 @@
 				 data-container="body"
 				 class="btn btn-primary climateScenarioBtn scenarioButton 
 				        lulc landValue" 
-				 id="urbExpandButton">
+				 id="urbanExpandButton">
 					<input type="radio" name="options" id="option2" autocomplete="off"> 
 					Urban Expansion
 				</label>
 				
 				<button class="glyphicon glyphicon-question-sign explainerButton scenarioExplainerButton"
-				id="urbExpandButtonExplainer">
+				id="urbanExpandButtonExplainer">
 				</button>
 				
 				<label 
@@ -206,7 +206,7 @@
 				 data-placement="left"
 				 data-container="body"
 				 class="btn btn-primary climateScenarioBtn scenarioButton 
-				        lulc" 
+				        lulc et" 
 				 id="fireSuppressButton">
 					<input type="radio" name="options" id="option2" autocomplete="off"> 
 					Fire Suppression
@@ -224,7 +224,7 @@
 				 data-placement="left"
 				 data-container="body"
 				 class="btn btn-primary climateScenarioBtn scenarioButton 
-				        lulc landValue" 
+				        lulc landValue et" 
 				 id="managedButton">
 					<input type="radio" name="options" id="option2" autocomplete="off">
 					Managed
@@ -242,7 +242,7 @@
 				 data-placement="left"
 				 data-container="body"
 				 class="btn btn-primary climateScenarioBtn scenarioButton 
-				        lulc landValue aridity" 
+				        lulc landValue aridity et" 
 				 id="econExtremeButton">
 					<input type="radio" name="options" id="option2" autocomplete="off"> 
 					Worst Case
